# clauser

./: .gitmodules  Cargo.toml  README.md  todo.md
lib/macros/: Cargo.toml  README.md
lib/macros/src/: error.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: de.rs  lib.rs  reader.rs  schema.rs  token.rs  tokenizer.rs  types.rs  value.rs
src/util/: error.rs  maybe_owned.rs  mod.rs  text_helpers.rs
tests/: de.rs  tokenizer.rs  value.rs
tests/data/: mod.rs
tests/data/thegreatwar/: mod.rs
tests/deserializer/: de.rs  duplicate.rs  enums.rs  mod.rs  util.rs
tests/deserializer/cases/: 00_enum.rs  00_enum.stderr  01_union.rs  01_union.stderr  02_named.rs  02_named.stderr  03_wrong_type.rs  03_wrong_type.stderr  04_not_vec.rs  04_not_vec.stderr  05_generic.rs
tests/mods/: mod.rs
