[package]
name = "clauser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pad = "0.1.6"
serde = { version = "1.0.203", features = ["derive", "std"], optional = true }
serde_path_to_error = { version = "0.1.16", optional = true }
clauser_macros = { path = "./lib/macros", optional = true }
static_assertions = "1.1.0"
zerocopy = "0.7.34"
zerocopy-derive = "0.7.34"

[dev-dependencies]
trybuild = "1.0.96"

[workspace]
members = ["lib/macros"]

[features]
default = ["serde", "macros"]
serde = ["dep:serde", "dep:serde_path_to_error"]
macros = ["serde", "dep:clauser_macros"]