[package]
name = "clauser_macros"
description = "Macros used by the `clauser` crate."
version = "0.1.0"
edition = "2021"
authors = ["Ashley Rogers <ashley@anime.lgbt>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azrogers/clauser"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.85", features = ["span-locations"] }
quote = "1.0.36"
static_assertions = "1.1.0"
syn = "2.0.66"
